--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
-  "name": "webgl-helfer",
+  "name": "golem",
   "version": "0.0.1",
   "description": "Simplifier for WebGL syntax",
-  "main": "index.js",
-  "repository": "not yet",
+  "main": "dist/index.js",
+  "repository": "https://github.com/atme/golem",
   "author": "Serge Pirogov",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.0.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-flowtype": "^3.11.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "flow-bin": "^0.102.0"
+  }
 }
